# ohos_projects

./: .gitignore
3861/: BUILD.gn
3861/genimind_ohos/: BUILD.gn  genimind_ohos.c
3861/shared_drivers/aht20/demo/: aht20_demo.c
3861/shared_drivers/aht20/src/: BUILD.gn  aht20.c  aht20.h
3861/shared_drivers/easy_wifi/src/: BUILD.gn  wifi_connecter.c
3861/shared_drivers/mqtt_task/: BUILD.gn  mqtt_lock.c  mqtt_lock.h  mqtt_task.c  mqtt_task.h
3861/shared_drivers/paho_mqtt/MQTTClient-C/: BUILD.gn
3861/shared_drivers/paho_mqtt/MQTTClient-C/samples/: BUILD.gn
3861/shared_drivers/paho_mqtt/MQTTClient-C/samples/FreeRTOS/: MQTTEcho.c
3861/shared_drivers/paho_mqtt/MQTTClient-C/samples/ohos/: BUILD.gn  mqtt_test.c  mqtt_test_cmsis.c  wifiiot_at.c
3861/shared_drivers/paho_mqtt/MQTTClient-C/src/: BUILD.gn  MQTTClient.c  MQTTClient.h
3861/shared_drivers/paho_mqtt/MQTTClient-C/src/FreeRTOS/: MQTTFreeRTOS.c  MQTTFreeRTOS.h
3861/shared_drivers/paho_mqtt/MQTTClient-C/src/ohos/: mqtt_ohos.h  mqtt_ohos_cmsis.c  mqtt_ohos_posix.c
3861/shared_drivers/paho_mqtt/MQTTPacket/: BUILD.gn
3861/smart_lock/src/: BUILD.gn  smart_lock.c
3863/: BUILD.gn
3863/peripheral/01_gpio_led/: BUILD.gn  gpio_led.c
3863/peripheral/02_pwm_led/: BUILD.gn  pwm_led.c
3863/shared_drivers/easy_wifi/: README.md
3863/shared_drivers/easy_wifi/demo/: BUILD.gn  wifi_connect_demo.c  wifi_hotspot_demo.c
3863/shared_drivers/easy_wifi/src/: BUILD.gn  wifi_connecter.c  wifi_starter.c
3863/shared_drivers/gpio_ex/: BUILD.gn  iot_gpio_ex.c  iot_gpio_ex.h
