# Copyright (c) 2020-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")

lite_component("3861") {
  features = [
    # # ---- 通用驱动 ---- #
    # ## MQTT模块
    # "shared_drivers/paho_mqtt/MQTTClient-C:paho-mqttclient",
    # "shared_drivers/paho_mqtt/MQTTPacket:paho-mqttpacket",
    # "shared_drivers/mqtt_task",
    # ## EasyWiFi模块
    # "shared_drivers/easy_wifi/src:easy_wifi",
    # "shared_drivers/aht20/src:aht20",
    # # ---- genimind项目 ---- #
    # "genimind_ohos",
    # # ---- smart_lock项目 ----#
    # "smart_lock/src:smart_lock",

  ]
}
