static_library("gpio_ex") {
    sources = [
        "iot_gpio_ex.c"
    ]
    include_dirs = [
        # include "ohos_init.h" for OpenHarmony5.0+
        "//commonlibrary/utils_lite/include",
        # include CMSIS-RTOS API V2 for OpenHarmony5.0+
        "//kernel/liteos_m/kal/cmsis",
        # include IoT硬件设备操作接口 for OpenHarmony5.0+：
        "//base/iothardware/peripheral/interfaces/inner_api",
        # ws63 API
        "//device/soc/hisilicon/ws63v100/sdk/include/driver",
        "//device/soc/hisilicon/ws63v100/sdk/drivers/chips/ws63/rom/drivers/chips/ws63/porting/pinctrl",
        "//device/soc/hisilicon/ws63v100/sdk/drivers/chips/ws63/porting/pwm",

    ]
}